--- a/style.css
+++ b/style.css
@@ -24,20 +24,38 @@ ul,
 
 .container {
     flex: 1 auto;
-    max-width: 100%
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-.header {
-    font-size: 56px;
-    font-weight: bold;
+.header,
+.footer {
+    flex: 0 auto;
     background-color: #383444;
     color: ivory;
     padding-top: 16px;
     padding-bottom: 16px;
+}
+
+.header {
+    max-height: fit-content;
     text-align: center;
 }
 
+.header-title {
+    font-size: 56px;
+    font-weight: bold;
+}
+
+.header-subtitle {
+    font-size: 36px;
+    font-weight: 700;
+}
+
 .content {
+    flex: 1;
     background-color: darkgrey;
     padding-top: 16px;
     padding-bottom: 16px;
@@ -60,4 +78,9 @@ ul,
     border-radius: 20px;
     max-width: 150px;
     max-height: 150px;
+}
+
+.footer {
+    max-height: 48px;
+    padding-left: 5%;
 }
