--- a/style.css
+++ b/style.css
@@ -61,6 +61,21 @@ ul,
     padding-bottom: 16px;
 }
 
+.menu-bar {
+    display: flex;
+    justify-content: flex-start;
+    padding-bottom: 16px;
+}
+
+.menu-item {
+    align-self: flex-end;
+    border-radius: 15px;
+    max-width: fit-content;
+    background-color: steelblue;
+    font-weight: bold;
+    padding: 8px 16px 8px 16px;
+}
+
 .games ul {
     display: flex;
     justify-content: center;
