--- a/css/default.css
+++ b/css/default.css
@@ -29,6 +29,7 @@ ul,
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    font-size: 16px;
 }
 
 .header,
@@ -65,6 +66,6 @@ ul,
 .footer {
     max-height: 48px;
     padding-right: 5%;
-    font-size: smaller;
+    font-size: 12px;
     text-align: right;
 }
