Add information for PF1E

--- a/css/game-information.css
+++ b/css/game-information.css
@@ -15,6 +15,10 @@
     font-weight: bold;
 }
 
+.game-information-list ul {
+    list-style-type: disc;
+}
+
 .game-information img {
     max-width: 100%;
 }
