--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    justify-content: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 a {
@@ -23,11 +23,9 @@ body,
 }
 
 .container {
-    flex: 1 auto;
-    max-width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    flex-flow: column;
+    height: 100vh;
     font-size: 16px;
 }
 
@@ -41,7 +39,7 @@ body,
 }
 
 .header {
-    max-height: fit-content;
+    flex: 0 1 auto;
     text-align: center;
 }
 
@@ -56,14 +54,14 @@ body,
 }
 
 .content {
-    flex: 1;
+    flex: 1 1 auto;
     background-color: darkgrey;
     padding-top: 16px;
     padding-bottom: 16px;
 }
 
 .footer {
-    max-height: 48px;
+    flex: 0 1 auto;
     padding-right: 5%;
     font-size: 12px;
     text-align: right;
