--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,6 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     height: 100vh;
-    width: 100vw;
 }
 
 a {
@@ -9,6 +8,7 @@ a {
     color: black;
 }
 
+html,
 body,
 .container {
     margin: 0px;
