--- a/css/information.css
+++ b/css/information.css
@@ -1,4 +1,4 @@
-.game-information-item {
+.information-item {
     background-color: lightgrey;
     border: 2px solid black;
     border-radius: 10px;
@@ -10,20 +10,20 @@
     gap: 8px;
 }
 
-.game-information-title {
+.information-title {
     font-size: 24px;
     font-weight: bold;
 }
 
-.game-information-list ul {
+.information-list ul {
     list-style-type: disc;
 }
 
-.game-information img {
+.information img {
     max-width: 100%;
 }
 
-.game-information-source {
+.information-source {
     align-self: flex-end;
     font-size: 12px;
 }
