Add homebrew race formatting

--- a/css/information.css
+++ b/css/information.css
@@ -15,6 +15,11 @@
     font-weight: bold;
 }
 
+.information-subtitle {
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .information-list ul {
     list-style-type: disc;
 }
