--- a/css/information.css
+++ b/css/information.css
@@ -20,6 +20,11 @@
     font-weight: bold;
 }
 
+.information-subsubtitle {
+    font-size: 18px;
+    font-weight: bold;
+}
+
 .information-list ul {
     list-style-type: disc;
 }
