--- a/css/default.css
+++ b/css/default.css
@@ -18,8 +18,8 @@ body,
 .header,
 .menu-bar,
 .content {
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .container {
@@ -58,6 +58,8 @@ body,
     background-color: darkgrey;
     padding-top: 16px;
     padding-bottom: 16px;
+    display: flex;
+    gap: 16px;
 }
 
 .footer {
