--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
     background-color: lightgray;
     flex: 1 10 20%;
-    max-width: fit-content;
+    max-width: 100vw;
     border: 2px solid black;
     border-radius: 10px;
     padding: 8px;
