--- a/css/default.css
+++ b/css/default.css
@@ -60,7 +60,7 @@ body,
     padding-bottom: 16px;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
     gap: 16px;
 }
 
