--- a/css/information.css
+++ b/css/information.css
@@ -1,5 +1,8 @@
 .information {
     flex: 10 1 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .information-item {
@@ -7,7 +10,6 @@
     border: 2px solid black;
     border-radius: 10px;
     padding: 16px;
-    margin-bottom: 16px;
 
     display: flex;
     flex-direction: column;
