--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,4 +1,4 @@
-.games ul {
+.pages ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -6,15 +6,16 @@
     gap: 32px;
 }
 
-.game {
+.page {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.game img {
+.page img {
     border-radius: 20px;
     max-width: 150px;
     max-height: 150px;
+    aspect-ratio: 1 / 1;
 }
