Refactored logic Fixed mobile layout

--- a/css/blueprint-calculator/blueprint-calculator.css
+++ b/css/blueprint-calculator/blueprint-calculator.css
@@ -1,27 +1,23 @@
 .blueprint-calculator {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     gap: 32px;
-    /* display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 3;
-    grid-auto-rows: minmax(0px, auto);
-     */
 }
 
 .calculator {
     order: 1;
-    justify-self: flex-start;
 }
 
 .empty-error,
 .error-message {
+    flex: 1 1 auto;
+    max-width: 400px;
     order: 2;
 }
 
 .empty-result,
 .result {
+    flex: 1 1 auto;
+    max-width: fit-content;
     order: 3;
-    justify-self: end;
 }
