--- a/css/blueprint-calculator/resultPanel.css
+++ b/css/blueprint-calculator/resultPanel.css
@@ -5,11 +5,16 @@
     gap: 8px;
 }
 
+.result-grid-parent {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    padding-bottom: 8px;
+}
+
 .result-grid {
     display: grid;
-    grid-template-columns: max-content max-content;
-    column-gap: 16px;
-    padding-bottom: 8px;
+    grid-auto-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .title,
